Fixed overflow scrolling on sect

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ div{
 	display: block;
 	overflow: auto;
 }
+
 div > #newsSect{
 	overflow-y: hidden;
 }
@@ -40,6 +41,7 @@ html, body{
 
 h1 {
 	margin: 50px 10% 30px 10%;
+	padding-top: 10px;
 }
 
 h1 + div{
@@ -203,8 +205,9 @@ div img
 
 .sect {
 	color: rgb(255,255,255);
-	min-height: 60%;
-	max-height: 100%;
+	/*min-height: 60%;
+	max-height: 100%;*/
+	overflow: auto;
 	width: 100%;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -230,6 +233,7 @@ div img
 	margin-left: 5%;
 	margin-right: 5%;
 }
+
 .subSection p {
 	margin-top: 2%;
 	margin-left: 5%;
@@ -283,8 +287,8 @@ div img
 }
 
 #applySect { 
+	overflow: auto;
 	padding-bottom: 40px;
-
 }
 
 #teamSect {
